--- a/avrecorder.ui
+++ b/avrecorder.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>569</width>
-    <height>425</height>
+    <height>452</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
       <x>12</x>
       <y>12</y>
       <width>542</width>
-      <height>379</height>
+      <height>417</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -30,7 +30,7 @@
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="bottomMargin">
-        <number>0</number>
+        <number>20</number>
        </property>
        <item>
         <layout class="QGridLayout" name="gridLayout_2">
@@ -47,21 +47,21 @@
          <item row="1" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>Audio Codec:</string>
+            <string>Audio codec:</string>
            </property>
           </widget>
          </item>
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Input Device:</string>
+            <string>Audio device:</string>
            </property>
           </widget>
          </item>
          <item row="2" column="0">
           <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>File Container:</string>
+            <string>File container:</string>
            </property>
           </widget>
          </item>
@@ -162,15 +162,38 @@
         <layout class="QHBoxLayout" name="horizontalLayout_5">
          <item>
           <widget class="QLabel" name="levelLabel">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="text">
-            <string>Audio Level:</string>
+            <string>Audio level:</string>
            </property>
           </widget>
          </item>
          <item>
-          <layout class="QVBoxLayout" name="levelsLayout"/>
+          <layout class="QVBoxLayout" name="levelsLayout" stretch="">
+           <property name="sizeConstraint">
+            <enum>QLayout::SetMinimumSize</enum>
+           </property>
+          </layout>
          </item>
         </layout>
+       </item>
+       <item>
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
        </item>
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -225,6 +248,12 @@
        </item>
        <item>
         <widget class="QLabel" name="viewfinder_0">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimumSize">
           <size>
            <width>240</width>
@@ -257,6 +286,12 @@
        </item>
        <item>
         <widget class="QLabel" name="viewfinder_1">
+         <property name="sizePolicy">
+          <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+           <horstretch>0</horstretch>
+           <verstretch>0</verstretch>
+          </sizepolicy>
+         </property>
          <property name="minimumSize">
           <size>
            <width>240</width>
@@ -270,6 +305,30 @@
           <string/>
          </property>
         </widget>
+       </item>
+       <item>
+        <layout class="QGridLayout" name="gridLayout_3" columnstretch="0,0" columnminimumwidth="0,0">
+         <item row="0" column="1">
+          <widget class="QComboBox" name="cameraOutBox"/>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_6">
+           <property name="text">
+            <string>Output size:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_7">
+           <property name="text">
+            <string>Frame rate:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QComboBox" name="frameRateBox"/>
+         </item>
+        </layout>
        </item>
       </layout>
      </item>
@@ -360,10 +419,44 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>cameraOutBox</sender>
+   <signal>currentTextChanged(QString)</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>setCameraOutput(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>472</x>
+     <y>364</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>284</x>
+     <y>212</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>frameRateBox</sender>
+   <signal>currentTextChanged(QString)</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>setCameraFramerate(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>472</x>
+     <y>394</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>284</x>
+     <y>225</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>setOutputLocation()</slot>
   <slot>toggleRecord()</slot>
   <slot>togglePause()</slot>
+  <slot>setCameraOutput(QString)</slot>
+  <slot>setCameraFramerate(QString)</slot>
  </slots>
 </ui>
