--- a/avrecorder.ui
+++ b/avrecorder.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>576</width>
-    <height>541</height>
+    <width>674</width>
+    <height>663</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -195,32 +195,46 @@
          </spacer>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
-           <widget class="QPushButton" name="outputButton">
-            <property name="text">
-             <string>Output...</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="recordButton">
-            <property name="text">
-             <string>Record</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="uploadButton">
-            <property name="enabled">
-             <bool>true</bool>
-            </property>
-            <property name="text">
-             <string>Upload</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
+         <layout class="QHBoxLayout" name="horizontalLayout_3"/>
+        </item>
+        <item>
+         <widget class="QGroupBox" name="groupBox_2">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>80</height>
+           </size>
+          </property>
+          <property name="title">
+           <string>Recording:</string>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_6">
+           <item>
+            <widget class="QPushButton" name="outputButton">
+             <property name="text">
+              <string>Output...</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="recordButton">
+             <property name="text">
+              <string>Record</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QPushButton" name="uploadButton">
+             <property name="enabled">
+              <bool>true</bool>
+             </property>
+             <property name="text">
+              <string>Upload</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
         </item>
        </layout>
       </item>
@@ -350,13 +364,52 @@
      </layout>
     </item>
     <item>
-     <widget class="QGroupBox" name="annotationBox">
-      <property name="title">
-       <string>Annotation:</string>
+     <widget class="QGroupBox" name="eventBox">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>80</height>
+       </size>
       </property>
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <property name="title">
+       <string>Events:</string>
+      </property>
+      <property name="checkable">
+       <bool>false</bool>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_4">
        <item>
-        <widget class="QPushButton" name="annoButton_1">
+        <widget class="QPushButton" name="eventButton_1">
+         <property name="text">
+          <string>Important</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="eventButton_2">
+         <property name="text">
+          <string>Positive</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="eventButton_3">
+         <property name="text">
+          <string>Negative</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="eventButton_4">
          <property name="text">
           <string>Boring</string>
          </property>
@@ -365,10 +418,25 @@
          </property>
         </widget>
        </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QGroupBox" name="statusBox">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>80</height>
+       </size>
+      </property>
+      <property name="title">
+       <string>Status:</string>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
-        <widget class="QPushButton" name="annoButton_2">
+        <widget class="QPushButton" name="statusButton_1">
          <property name="text">
-          <string>Neutral</string>
+          <string>Meeting</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -376,9 +444,49 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="annoButton_3">
+        <widget class="QPushButton" name="statusButton_2">
          <property name="text">
-          <string>Interesting</string>
+          <string>Discussion</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="statusButton_3">
+         <property name="text">
+          <string>Emails</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="statusButton_4">
+         <property name="text">
+          <string>Reading</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="statusButton_5">
+         <property name="text">
+          <string>Writing</string>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QPushButton" name="statusButton_6">
+         <property name="text">
+          <string>Break</string>
          </property>
          <property name="checkable">
           <bool>true</bool>
@@ -481,8 +589,8 @@
    <slot>setCameraOutput(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>472</x>
-     <y>364</y>
+     <x>640</x>
+     <y>377</y>
     </hint>
     <hint type="destinationlabel">
      <x>284</x>
@@ -497,8 +605,8 @@
    <slot>setCameraFramerate(QString)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>472</x>
-     <y>394</y>
+     <x>640</x>
+     <y>407</y>
     </hint>
     <hint type="destinationlabel">
      <x>284</x>
@@ -539,14 +647,14 @@
    </hints>
   </connection>
   <connection>
-   <sender>annoButton_1</sender>
+   <sender>statusButton_1</sender>
    <signal>clicked()</signal>
    <receiver>AvRecorder</receiver>
-   <slot>setAnnotationTo1()</slot>
+   <slot>setStatusTo1()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>109</x>
-     <y>484</y>
+     <x>123</x>
+     <y>569</y>
     </hint>
     <hint type="destinationlabel">
      <x>287</x>
@@ -555,14 +663,14 @@
    </hints>
   </connection>
   <connection>
-   <sender>annoButton_2</sender>
+   <sender>statusButton_2</sender>
    <signal>clicked()</signal>
    <receiver>AvRecorder</receiver>
-   <slot>setAnnotationTo2()</slot>
+   <slot>setStatusTo2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>287</x>
-     <y>484</y>
+     <x>233</x>
+     <y>569</y>
     </hint>
     <hint type="destinationlabel">
      <x>287</x>
@@ -571,18 +679,130 @@
    </hints>
   </connection>
   <connection>
-   <sender>annoButton_3</sender>
+   <sender>statusButton_3</sender>
    <signal>clicked()</signal>
    <receiver>AvRecorder</receiver>
-   <slot>setAnnotationTo3()</slot>
+   <slot>setStatusTo3()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>466</x>
-     <y>484</y>
+     <x>338</x>
+     <y>569</y>
     </hint>
     <hint type="destinationlabel">
      <x>287</x>
      <y>270</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>statusButton_4</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>setStatusTo4()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>391</x>
+     <y>553</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>statusButton_5</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>setStatusTo5()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>496</x>
+     <y>553</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>statusButton_6</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>setStatusTo6()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>601</x>
+     <y>553</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventButton_1</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>event1()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>99</x>
+     <y>484</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventButton_2</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>event2()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>257</x>
+     <y>484</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventButton_3</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>event3()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>416</x>
+     <y>484</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>eventButton_4</sender>
+   <signal>clicked()</signal>
+   <receiver>AvRecorder</receiver>
+   <slot>event4()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>574</x>
+     <y>484</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>336</x>
+     <y>304</y>
     </hint>
    </hints>
   </connection>
@@ -596,8 +816,15 @@
   <slot>setCamera0State(int)</slot>
   <slot>setCamera1State(int)</slot>
   <slot>upload()</slot>
-  <slot>setAnnotationTo1()</slot>
-  <slot>setAnnotationTo2()</slot>
-  <slot>setAnnotationTo3()</slot>
+  <slot>setStatusTo1()</slot>
+  <slot>setStatusTo2()</slot>
+  <slot>setStatusTo3()</slot>
+  <slot>setStatusTo4()</slot>
+  <slot>setStatusTo5()</slot>
+  <slot>setStatusTo6()</slot>
+  <slot>event1()</slot>
+  <slot>event2()</slot>
+  <slot>event3()</slot>
+  <slot>event4()</slot>
  </slots>
 </ui>
