Added version number 0.3 to window title.

--- a/avrecorder.ui
+++ b/avrecorder.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Re:Know Meeting recorder</string>
+   <string>Re:Know Meeting recorder version 0.3</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_3">
